--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -701,28 +701,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 138,
       "id": "ca7ed994-79ca-4192-957e-f496ff3d85f6",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ca7ed994-79ca-4192-957e-f496ff3d85f6",
-        "outputId": "2aa8abd0-789f-41a8-9530-d3a9a83e4e83"
+        "id": "ca7ed994-79ca-4192-957e-f496ff3d85f6"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "33.50933333333333\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-sphere\n",
-        "vol = 4/3 * 3.1415 * 8\n",
-        "print(vol)"
+        "vol = 4/3 * 3.1415 * 8"
       ]
     },
     {
@@ -1214,28 +1201,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 139,
       "id": "d924c375-683b-46d0-baf8-d8a6ac934df4",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "d924c375-683b-46d0-baf8-d8a6ac934df4",
-        "outputId": "60bf8d0b-81b0-4fb2-96f0-7130b39bfb9d"
+        "id": "d924c375-683b-46d0-baf8-d8a6ac934df4"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "False\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-sphereOrCube\n",
-        "sphereOrCube = (4/3 * 3.1415 * 8) > (12 ** 3)\n",
-        "print(sphereOrCube)"
+        "sphereOrCube = (4/3 * 3.1415 * 8) > (12 ** 3)"
       ]
     },
     {
@@ -1254,28 +1228,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 140,
       "id": "e3fbd105-2151-4988-8e00-0833e5f4b447",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "e3fbd105-2151-4988-8e00-0833e5f4b447",
-        "outputId": "819388be-a189-4332-f7b2-f992210f7f90"
+        "id": "e3fbd105-2151-4988-8e00-0833e5f4b447"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "False\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-hei\n",
-        "twinStrings = \"hei\" == \"Hei\"\n",
-        "print(twinStrings)"
+        "twinStrings = \"hei\" == \"Hei\""
       ]
     },
     {
@@ -2339,24 +2300,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 141,
       "id": "d12e9b05",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "d12e9b05",
-        "outputId": "edafdf04-03d4-47bc-b49a-f91b5ea48cca"
+        "id": "d12e9b05"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[0, -1, 2, -3, 4, -5, 6, -7, 8, -9, 10, -11, 12, -13, 14, -15, 16, -17, 18, -19, 20, -21, 22, -23, 24, -25, 26, -27, 28, -29, 30, -31, 32, -33, 34, -35, 36, -37, 38, -39, 40, -41, 42, -43, 44, -45, 46, -47, 48, -49, 50]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-oddsOrEvens\n",
         "odds0rEvens = []\n",
@@ -2364,9 +2313,7 @@
         "  if i % 2 == 0:\n",
         "    odds0rEvens.append(i)\n",
         "  else:\n",
-        "    odds0rEvens.append(-i)\n",
-        "\n",
-        "print(oddsOrEvens)"
+        "    odds0rEvens.append(-i)"
       ]
     },
     {
