--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -701,15 +701,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": 145,
       "id": "ca7ed994-79ca-4192-957e-f496ff3d85f6",
       "metadata": {
-        "id": "ca7ed994-79ca-4192-957e-f496ff3d85f6"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ca7ed994-79ca-4192-957e-f496ff3d85f6",
+        "outputId": "7ccfb1ba-da74-4f41-c68f-2a2989715501"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2144.597333333333\n"
+          ]
+        }
+      ],
       "source": [
         "#si-sphere\n",
-        "vol = 4/3 * 3.1415 * 8"
+        "vol = 4/3 * 3.1415 * (8 ** 3)\n",
+        "\n",
+        "print(vol)odds0rEvens"
       ]
     },
     {
@@ -1201,15 +1215,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": 143,
       "id": "d924c375-683b-46d0-baf8-d8a6ac934df4",
       "metadata": {
-        "id": "d924c375-683b-46d0-baf8-d8a6ac934df4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d924c375-683b-46d0-baf8-d8a6ac934df4",
+        "outputId": "0ac31cc1-2cc1-4cbd-c267-98919a646d2b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ],
       "source": [
         "#si-sphereOrCube\n",
-        "sphereOrCube = (4/3 * 3.1415 * 8) > (12 ** 3)"
+        "sphereOrCube = (4/3 * 3.1415 * (8 ** 3)) > (12 ** 3)\n",
+        "\n",
+        "print(sphereOrCube)"
       ]
     },
     {
@@ -2300,20 +2328,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": 150,
       "id": "d12e9b05",
       "metadata": {
-        "id": "d12e9b05"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d12e9b05",
+        "outputId": "730de72b-41ca-4add-de11-69a79cefe4c9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, -1, 2, -3, 4, -5, 6, -7, 8, -9, 10, -11, 12, -13, 14, -15, 16, -17, 18, -19, 20, -21, 22, -23, 24, -25, 26, -27, 28, -29, 30, -31, 32, -33, 34, -35, 36, -37, 38, -39, 40, -41, 42, -43, 44, -45, 46, -47, 48, -49, 50]\n"
+          ]
+        }
+      ],
       "source": [
         "#si-oddsOrEvens\n",
         "odds0rEvens = []\n",
-        "for i in range(1, 51):\n",
+        "for i in range(0, 51):\n",
         "  if i % 2 == 0:\n",
         "    odds0rEvens.append(i)\n",
         "  else:\n",
-        "    odds0rEvens.append(-i)"
+        "    odds0rEvens.append(-i)\n",
+        "\n",
+        "print(odds0rEvens)"
       ]
     },
     {
