--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -701,14 +701,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 151,
       "id": "ca7ed994-79ca-4192-957e-f496ff3d85f6",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ca7ed994-79ca-4192-957e-f496ff3d85f6",
-        "outputId": "7ccfb1ba-da74-4f41-c68f-2a2989715501"
+        "outputId": "3863bc22-0453-4c61-dc19-18a07ae464cd"
       },
       "outputs": [
         {
@@ -723,7 +723,7 @@
         "#si-sphere\n",
         "vol = 4/3 * 3.1415 * (8 ** 3)\n",
         "\n",
-        "print(vol)odds0rEvens"
+        "print(vol)"
       ]
     },
     {
@@ -2328,28 +2328,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": 152,
       "id": "d12e9b05",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d12e9b05",
-        "outputId": "730de72b-41ca-4add-de11-69a79cefe4c9"
+        "outputId": "905a713a-ce08-4a98-8051-df02a96d9ac1"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[0, -1, 2, -3, 4, -5, 6, -7, 8, -9, 10, -11, 12, -13, 14, -15, 16, -17, 18, -19, 20, -21, 22, -23, 24, -25, 26, -27, 28, -29, 30, -31, 32, -33, 34, -35, 36, -37, 38, -39, 40, -41, 42, -43, 44, -45, 46, -47, 48, -49, 50]\n"
+            "[-1, 2, -3, 4, -5, 6, -7, 8, -9, 10, -11, 12, -13, 14, -15, 16, -17, 18, -19, 20, -21, 22, -23, 24, -25, 26, -27, 28, -29, 30, -31, 32, -33, 34, -35, 36, -37, 38, -39, 40, -41, 42, -43, 44, -45, 46, -47, 48, -49, 50]\n"
           ]
         }
       ],
       "source": [
         "#si-oddsOrEvens\n",
         "odds0rEvens = []\n",
-        "for i in range(0, 51):\n",
+        "for i in range(1, 51):\n",
         "  if i % 2 == 0:\n",
         "    odds0rEvens.append(i)\n",
         "  else:\n",
