Attempt 5 (5th time's the charm)

--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -2328,14 +2328,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": 153,
       "id": "d12e9b05",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d12e9b05",
-        "outputId": "905a713a-ce08-4a98-8051-df02a96d9ac1"
+        "outputId": "a439e193-ed20-4bdc-95b4-cdf3780799bb"
       },
       "outputs": [
         {
@@ -2348,14 +2348,14 @@
       ],
       "source": [
         "#si-oddsOrEvens\n",
-        "odds0rEvens = []\n",
+        "oddsOrEvens = []\n",
         "for i in range(1, 51):\n",
         "  if i % 2 == 0:\n",
-        "    odds0rEvens.append(i)\n",
+        "    oddsOrEvens.append(i)\n",
         "  else:\n",
-        "    odds0rEvens.append(-i)\n",
+        "    oddsOrEvens.append(-i)\n",
         "\n",
-        "print(odds0rEvens)"
+        "print(oddsOrEvens)"
       ]
     },
     {
